Custom--app/main/default/objects/Intranet_Form__c/Intranet_Form__c.object-meta.xml
<CustomObject>
    <description>Related to Intranet deployment. Internal forms with/wo approval process.</description>
    <label>Intranet Form</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intranet Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>