Custom--app/main/default/objects/Intranet_Form__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>