Custom--app/main/default/objects/Intranet_Form__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <length>18</length>
    <type>Text</type>
</CustomField>