Custom--app/main/default/objects/Intranet_Form__c/fields/Enter_Name_Of_Airline__c.field-meta.xml
<CustomField>
    <fullName>Enter_Name_Of_Airline__c</fullName>
    <label>Enter Name Of Airline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>