Custom--app/main/default/objects/Intranet_Form__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Type</label>
    <referenceTo>IntranetFormList__c</referenceTo>
    <relationshipLabel>Intranet Forms</relationshipLabel>
    <relationshipName>Intranet_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>