Custom--app/main/default/objects/Intranet_Form__c/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Line Of Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>