Custom--app/main/default/objects/Intranet_Form__c/fields/Reason_For_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Request__c</fullName>
    <label>Reason For Request</label>
    <length>200</length>
    <type>Text</type>
</CustomField>