Custom--app/main/default/objects/Intranet_Form__c/fields/Skip_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Skip_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Reviewer</label>
    <type>Checkbox</type>
</CustomField>