Custom--app/main/default/objects/Intranet_Form__c/fields/Team_Member_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Hire_Date__c</fullName>
    <label>Team Member Hire Date</label>
    <type>DateTime</type>
</CustomField>