Custom--app/main/default/objects/Intranet_Form__c/fields/Team_Member_Id_Vendor_Company__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Id_Vendor_Company__c</fullName>
    <label>Team Member Id / Vendor Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>