Custom--app/main/default/objects/Intranet_Form__c/fields/Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Name__c</fullName>
    <label>Team Member Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>