Custom--app/main/default/objects/Intranet_Form__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <label>Telephone Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>